package events

import "context"

// Package events provides event handling from kubilitics-backend stream.
//
// Responsibilities:
//   - Process incoming events from kubilitics-backend
//   - Detect anomalous events
//   - Trigger proactive investigations when needed
//   - Feed events into World Model
//   - Correlate events with metrics
//   - Build event-based alerts
//
// Event Types:
//
//   1. Pod Events
//      - Created, Started, Ready, Failed, CrashLoopBackOff
//      - OOMKilled, Evicted, Restarted
//      - Indicates: deployment activity, failures, resource issues
//
//   2. Node Events
//      - Cordoned, Uncordoned, Ready, NotReady
//      - Memory/Disk pressure, PID pressure
//      - Indicates: node maintenance, resource constraints
//
//   3. Cluster Events
//      - Scaling events
//      - Upgrade events
//      - Storage events
//
// Anomaly Detection in Events:
//   - Sudden restart surge: Pod restarting more than N times in M minutes
//   - CrashLoop pattern: Pod reaching CrashLoopBackOff state
//   - Node failures: Multiple nodes going NotReady
//   - Resource pressure: High memory/disk pressure events
//
// Proactive Investigation Triggers:
//   - When: Pod receives CrashLoopBackOff event
//     Trigger: "Pod crash investigation" with pod details
//
//   - When: Multiple pods in deployment fail quickly
//     Trigger: "Deployment failure investigation"
//
//   - When: Node goes NotReady unexpectedly
//     Trigger: "Node health investigation"
//
//   - When: Resource pressure detected
//     Trigger: "Capacity planning investigation"
//
// Event Correlation:
//   - Group related events (e.g., all failures in deployment)
//   - Timeline analysis (before/during/after incident)
//   - Causal inference (this event likely caused that event)
//
// Integration Points:
//   - gRPC Client: Receives events from backend stream
//   - World Model: Feed events for context
//   - Reasoning Engine: Trigger proactive investigations
//   - Anomaly Detector: Detect unusual event patterns
//   - Audit Logger: Log significant events
//   - Analytics Engine: Correlate with metrics

// EventHandler defines the interface for event processing.
type EventHandler interface {
	// HandleEvent processes a single event from backend stream.
	// Detects anomalies, triggers investigations if needed.
	HandleEvent(ctx context.Context, event interface{}) error

	// GetRecentEvents returns recent events (cached in memory).
	// Returns: list of events with timestamps
	GetRecentEvents(ctx context.Context, namespace string, kind string, limit int) ([]interface{}, error)

	// GetEventStats returns statistics about events.
	// Returns: event counts by type, anomaly patterns detected
	GetEventStats(ctx context.Context) (interface{}, error)

	// GetEventTimeline returns events related to incident in time order.
	// startTime, endTime: time range around incident
	GetEventTimeline(ctx context.Context, namespace string, startTime interface{}, endTime interface{}) ([]interface{}, error)

	// FindCorrelatedEvents finds events that are correlated.
	// Returns: groups of related events with correlation scores
	FindCorrelatedEvents(ctx context.Context, event interface{}) ([]interface{}, error)

	// SetAnomalyThreshold sets threshold for anomaly detection.
	// eventType: type of event (Pod, Node, etc.)
	// threshold: count threshold (e.g., restart count)
	SetAnomalyThreshold(ctx context.Context, eventType string, threshold int) error

	// TriggerManualInvestigation manually triggers investigation for event.
	TriggerManualInvestigation(ctx context.Context, event interface{}) (string, error)
}

// NewEventHandler creates a new event handler with dependencies.
func NewEventHandler() EventHandler {
	// Inject World Model, Reasoning Engine, Anomaly Detector, Analytics Engine
	// Initialize event cache and anomaly thresholds
	// Set up investigation trigger rules
	return nil
}
